@@ -2,71 +2,119 @@ package seedu.address.logic.commands;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static seedu.address.logic.parser.CliSyntax.PREFIX_ADDRESS;
-import static seedu.address.logic.parser.CliSyntax.PREFIX_EMAIL;
-import static seedu.address.logic.parser.CliSyntax.PREFIX_NAME;
-import static seedu.address.logic.parser.CliSyntax.PREFIX_PHONE;
-import static seedu.address.logic.parser.CliSyntax.PREFIX_TAG;
+import static seedu.address.logic.parser.CliSyntax.PREFIX_ITEM_BOUGHT_DATE;
+import static seedu.address.logic.parser.CliSyntax.PREFIX_ITEM_EXPIRY_DATE;
+import static seedu.address.logic.parser.CliSyntax.PREFIX_ITEM_NAME;
+import static seedu.address.logic.parser.CliSyntax.PREFIX_ITEM_QUANTITY;
+import static seedu.address.logic.parser.CliSyntax.PREFIX_ITEM_UNIT;
 import static seedu.address.testutil.Assert.assertThrows;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import seedu.address.commons.core.index.Index;
+import seedu.address.logic.commands.EditCommand.EditItemDescriptor;
 import seedu.address.logic.commands.exceptions.CommandException;
 import seedu.address.model.AddressBook;
 import seedu.address.model.Model;
-import seedu.address.model.person.NameContainsKeywordsPredicate;
-import seedu.address.model.person.Person;
-import seedu.address.testutil.EditPersonDescriptorBuilder;
+import seedu.address.model.item.Item;
+import seedu.address.model.item.NameContainsKeywordsPredicate;
+import seedu.address.testutil.EditItemDescriptorBuilder;
 
 /**
  * Contains helper methods for testing commands.
  */
 public class CommandTestUtil {
 
-    public static final String VALID_NAME_AMY = "Amy Bee";
-    public static final String VALID_NAME_BOB = "Bob Choo";
-    public static final String VALID_PHONE_AMY = "11111111";
-    public static final String VALID_PHONE_BOB = "22222222";
-    public static final String VALID_EMAIL_AMY = "amy@example.com";
-    public static final String VALID_EMAIL_BOB = "bob@example.com";
-    public static final String VALID_ADDRESS_AMY = "Block 312, Amy Street 1";
-    public static final String VALID_ADDRESS_BOB = "Block 123, Bobby Street 3";
-    public static final String VALID_TAG_HUSBAND = "husband";
-    public static final String VALID_TAG_FRIEND = "friend";
+    public static final String VALID_ITEM_NAME_POTATOES = "Potatoes";
+    public static final String VALID_ITEM_QUANTITY_POTATOES = "10";
+    public static final String VALID_ITEM_UNIT_POTATOES = "kg";
+    public static final String VALID_ITEM_BOUGHT_DATE_POTATOES = "2022-11-11";
+    public static final String VALID_ITEM_EXPIRY_DATE_POTATOES = "2022-11-11";
 
-    public static final String NAME_DESC_AMY = " " + PREFIX_NAME + VALID_NAME_AMY;
-    public static final String NAME_DESC_BOB = " " + PREFIX_NAME + VALID_NAME_BOB;
-    public static final String PHONE_DESC_AMY = " " + PREFIX_PHONE + VALID_PHONE_AMY;
-    public static final String PHONE_DESC_BOB = " " + PREFIX_PHONE + VALID_PHONE_BOB;
-    public static final String EMAIL_DESC_AMY = " " + PREFIX_EMAIL + VALID_EMAIL_AMY;
-    public static final String EMAIL_DESC_BOB = " " + PREFIX_EMAIL + VALID_EMAIL_BOB;
-    public static final String ADDRESS_DESC_AMY = " " + PREFIX_ADDRESS + VALID_ADDRESS_AMY;
-    public static final String ADDRESS_DESC_BOB = " " + PREFIX_ADDRESS + VALID_ADDRESS_BOB;
-    public static final String TAG_DESC_FRIEND = " " + PREFIX_TAG + VALID_TAG_FRIEND;
-    public static final String TAG_DESC_HUSBAND = " " + PREFIX_TAG + VALID_TAG_HUSBAND;
+    public static final String VALID_ITEM_NAME_CUCUMBERS = "Cucumbers";
+    public static final String VALID_ITEM_QUANTITY_CUCUMBERS = "2000";
+    public static final String VALID_ITEM_UNIT_CUCUMBERS = "grams";
+    public static final String VALID_ITEM_BOUGHT_DATE_CUCUMBERS = "2022-12-12";
+    public static final String VALID_ITEM_EXPIRY_DATE_CUCUMBERS = "2022-12-12";
 
-    public static final String INVALID_NAME_DESC = " " + PREFIX_NAME + "James&"; // '&' not allowed in names
-    public static final String INVALID_PHONE_DESC = " " + PREFIX_PHONE + "911a"; // 'a' not allowed in phones
-    public static final String INVALID_EMAIL_DESC = " " + PREFIX_EMAIL + "bob!yahoo"; // missing '@' symbol
-    public static final String INVALID_ADDRESS_DESC = " " + PREFIX_ADDRESS; // empty string not allowed for addresses
-    public static final String INVALID_TAG_DESC = " " + PREFIX_TAG + "hubby*"; // '*' not allowed in tags
+    public static final String VALID_DESC_ITEM_NAME_POTATOES = PREFIX_ITEM_NAME
+        + VALID_ITEM_NAME_POTATOES;
+    public static final String VALID_DESC_ITEM_QUANTITY_POTATOES = PREFIX_ITEM_QUANTITY
+        + VALID_ITEM_QUANTITY_POTATOES;
+    public static final String VALID_DESC_ITEM_UNIT_POTATOES = PREFIX_ITEM_UNIT
+        + VALID_ITEM_UNIT_POTATOES;
+    public static final String VALID_DESC_ITEM_BOUGHT_DATE_POTATOES = PREFIX_ITEM_BOUGHT_DATE
+        + VALID_ITEM_BOUGHT_DATE_POTATOES;
+    public static final String VALID_DESC_ITEM_EXPIRY_DATE_POTATOES = PREFIX_ITEM_EXPIRY_DATE
+        + VALID_ITEM_EXPIRY_DATE_POTATOES;
+
+    public static final String VALID_DESC_ITEM_NAME_CUCUMBERS = PREFIX_ITEM_NAME
+        + VALID_ITEM_NAME_CUCUMBERS;
+    public static final String VALID_DESC_ITEM_QUANTITY_CUCUMBERS = PREFIX_ITEM_QUANTITY
+        + VALID_ITEM_QUANTITY_CUCUMBERS;
+    public static final String VALID_DESC_ITEM_UNIT_CUCUMBERS = PREFIX_ITEM_UNIT
+        + VALID_ITEM_UNIT_CUCUMBERS;
+    public static final String VALID_DESC_ITEM_BOUGHT_DATE_CUCUMBERS = PREFIX_ITEM_BOUGHT_DATE
+        + VALID_ITEM_BOUGHT_DATE_CUCUMBERS;
+    public static final String VALID_DESC_ITEM_EXPIRY_DATE_CUCUMBERS = PREFIX_ITEM_EXPIRY_DATE
+        + VALID_ITEM_EXPIRY_DATE_CUCUMBERS;
+
+    public static final String INVALID_ITEM_NAME_POTATOES = "Potatoes|/";
+    public static final String INVALID_ITEM_QUANTITY_POTATOES = "10|/";
+    public static final String INVALID_ITEM_UNIT_POTATOES = "kg|/";
+    public static final String INVALID_ITEM_BOUGHT_DATE_POTATOES = "2022-11-11|/";
+    public static final String INVALID_ITEM_EXPIRY_DATE_POTATOES = "2022-11-11|/";
+
+    public static final String INVALID_ITEM_NAME_CUCUMBERS = "Cucumbers|/";
+    public static final String INVALID_ITEM_QUANTITY_CUCUMBERS = "2000|/";
+    public static final String INVALID_ITEM_UNIT_CUCUMBERS = "grams|/";
+    public static final String INVALID_ITEM_BOUGHT_DATE_CUCUMBERS = "2022-12-12|/";
+    public static final String INVALID_ITEM_EXPIRY_DATE_CUCUMBERS = "2022-12-12|/";
+
+    public static final String INVALID_DESC_ITEM_NAME_CUCUMBERS = PREFIX_ITEM_NAME
+        + INVALID_ITEM_NAME_CUCUMBERS;
+    public static final String INVALID_DESC_ITEM_QUANTITY_CUCUMBERS = PREFIX_ITEM_QUANTITY
+        + INVALID_ITEM_QUANTITY_CUCUMBERS;
+    public static final String INVALID_DESC_ITEM_UNIT_CUCUMBERS = PREFIX_ITEM_UNIT
+        + INVALID_ITEM_UNIT_CUCUMBERS;
+    public static final String INVALID_DESC_ITEM_BOUGHT_DATE_CUCUMBERS = PREFIX_ITEM_BOUGHT_DATE
+        + INVALID_ITEM_BOUGHT_DATE_CUCUMBERS;
+    public static final String INVALID_DESC_ITEM_EXPIRY_DATE_CUCUMBERS = PREFIX_ITEM_EXPIRY_DATE
+        + INVALID_ITEM_EXPIRY_DATE_CUCUMBERS;
+
+    public static final String INVALID_DESC_ITEM_NAME_POTATOES = PREFIX_ITEM_NAME
+        + INVALID_ITEM_NAME_POTATOES;
+    public static final String INVALID_DESC_ITEM_QUANTITY_POTATOES = PREFIX_ITEM_QUANTITY
+        + INVALID_ITEM_QUANTITY_POTATOES;
+    public static final String INVALID_DESC_ITEM_UNIT_POTATOES = PREFIX_ITEM_UNIT
+        + INVALID_ITEM_UNIT_POTATOES;
+    public static final String INVALID_DESC_ITEM_BOUGHT_DATE_POTATOES = PREFIX_ITEM_BOUGHT_DATE
+        + INVALID_ITEM_BOUGHT_DATE_POTATOES;
+    public static final String INVALID_DESC_ITEM_EXPIRY_DATE_POTATOES = PREFIX_ITEM_EXPIRY_DATE
+        + INVALID_ITEM_EXPIRY_DATE_POTATOES;
 
     public static final String PREAMBLE_WHITESPACE = "\t  \r  \n";
     public static final String PREAMBLE_NON_EMPTY = "NonEmptyPreamble";
 
-    public static final EditCommand.EditPersonDescriptor DESC_AMY;
-    public static final EditCommand.EditPersonDescriptor DESC_BOB;
+    public static final EditItemDescriptor DESC_POTATOES;
+    public static final EditItemDescriptor DESC_CUCUMBERS;
 
     static {
-        DESC_AMY = new EditPersonDescriptorBuilder().withName(VALID_NAME_AMY)
-                .withPhone(VALID_PHONE_AMY).withEmail(VALID_EMAIL_AMY).withAddress(VALID_ADDRESS_AMY)
-                .withTags(VALID_TAG_FRIEND).build();
-        DESC_BOB = new EditPersonDescriptorBuilder().withName(VALID_NAME_BOB)
-                .withPhone(VALID_PHONE_BOB).withEmail(VALID_EMAIL_BOB).withAddress(VALID_ADDRESS_BOB)
-                .withTags(VALID_TAG_HUSBAND, VALID_TAG_FRIEND).build();
+        DESC_POTATOES = new EditItemDescriptorBuilder()
+            .withItemName(VALID_ITEM_NAME_POTATOES)
+            .withItemQuantity(VALID_ITEM_QUANTITY_POTATOES)
+            .withItemUnit(VALID_ITEM_UNIT_POTATOES)
+            .withItemBoughtDate(VALID_ITEM_BOUGHT_DATE_POTATOES)
+            .withItemExpiryDate(VALID_ITEM_EXPIRY_DATE_POTATOES)
+            .build();
+        DESC_CUCUMBERS = new EditItemDescriptorBuilder()
+            .withItemName(VALID_ITEM_EXPIRY_DATE_CUCUMBERS)
+            .withItemQuantity(VALID_ITEM_EXPIRY_DATE_CUCUMBERS)
+            .withItemUnit(VALID_ITEM_EXPIRY_DATE_CUCUMBERS)
+            .withItemBoughtDate(VALID_ITEM_EXPIRY_DATE_CUCUMBERS)
+            .withItemExpiryDate(VALID_ITEM_EXPIRY_DATE_CUCUMBERS)
+            .build();
     }
 
     /**
@@ -75,7 +123,7 @@ public class CommandTestUtil {
      * - the {@code actualModel} matches {@code expectedModel}
      */
     public static void assertCommandSuccess(Command command, Model actualModel, CommandResult expectedCommandResult,
-            Model expectedModel) {
+                                            Model expectedModel) {
         try {
             CommandResult result = command.execute(actualModel);
             assertEquals(expectedCommandResult, result);
@@ -90,7 +138,7 @@ public class CommandTestUtil {
      * that takes a string {@code expectedMessage}.
      */
     public static void assertCommandSuccess(Command command, Model actualModel, String expectedMessage,
-            Model expectedModel) {
+                                            Model expectedModel) {
         CommandResult expectedCommandResult = new CommandResult(expectedMessage);
         assertCommandSuccess(command, actualModel, expectedCommandResult, expectedModel);
     }
@@ -105,24 +153,24 @@ public class CommandTestUtil {
         // we are unable to defensively copy the model for comparison later, so we can
         // only do so by copying its components.
         AddressBook expectedAddressBook = new AddressBook(actualModel.getAddressBook());
-        List<Person> expectedFilteredList = new ArrayList<>(actualModel.getFilteredPersonList());
+        List<Item> expectedFilteredList = new ArrayList<>(actualModel.getFilteredItemList());
 
         assertThrows(CommandException.class, expectedMessage, () -> command.execute(actualModel));
         assertEquals(expectedAddressBook, actualModel.getAddressBook());
-        assertEquals(expectedFilteredList, actualModel.getFilteredPersonList());
+        assertEquals(expectedFilteredList, actualModel.getFilteredItemList());
     }
+
     /**
      * Updates {@code model}'s filtered list to show only the person at the given {@code targetIndex} in the
      * {@code model}'s address book.
      */
-    public static void showPersonAtIndex(Model model, Index targetIndex) {
-        assertTrue(targetIndex.getZeroBased() < model.getFilteredPersonList().size());
+    public static void showItemAtIndex(Model model, Index targetIndex) {
+        assertTrue(targetIndex.getZeroBased() < model.getFilteredItemList().size());
 
-        Person person = model.getFilteredPersonList().get(targetIndex.getZeroBased());
-        final String[] splitName = person.getName().fullName.split("\\s+");
-        model.updateFilteredPersonList(new NameContainsKeywordsPredicate(Arrays.asList(splitName[0])));
+        Item item = model.getFilteredItemList().get(targetIndex.getZeroBased());
+        final String name = item.getName().toString();
+        model.updateFilteredItemList(new NameContainsKeywordsPredicate(List.of(name)));
 
-        assertEquals(1, model.getFilteredPersonList().size());
+        assertEquals(1, model.getFilteredItemList().size());
     }
-
 }
